@@ -1,7 +1,9 @@
+  14 Jan 2005; Preston Cody <codeman@gentoo.org>
+  simple [ instead of { bug.
+
   07 Jan 2005; Preston Cody <codeman@gentoo.org>
   Added grp_install and services and fixed extra_packages to dialogfe
 
   05 Jan 2005; Preston Cody <codeman@gentoo.org>
   Initial ChangeLog commit. Getting the FE to interact with the CC correctly
   lots of issues still to be resolved here.  also added a README
-
