@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.36 2005/01/14 06:31:08 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.37 2005/01/14 07:07:08 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   14 Jan 2005; Preston Cody <codeman@gentoo.org>
-  Added lilo code and cleaned up lilo code.  also do_partitioning renamed to partition
+  Added lilo code and cleaned up lilo code.  also do_partitioning renamed to 
+  partition. fixed misc exit_status => exitstatus typo.
   
   11 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added basic code for resizing filesystems with pyparted. Fixed code for
